--- a/news-website/src/main/resources/templates/index.html
+++ b/news-website/src/main/resources/templates/index.html
@@ -241,7 +241,7 @@
                   <div class="sumry-body">
                     <figure class="figure post-thumbnail sumry-thumbnail">
                       <div id="videoSectionPlyr" class="plyr__video-embed">
-                        <iframe src="https://www.youtube.com/embed/bTqVqk7FSmY?origin=https://plyr.io&amp;iv_load_policy=3&amp;modestbranding=1&amp;playsinline=1&amp;title=false&amp;showinfo=0&amp;rel=0&amp;enablejsapi=1" allowfullscreen></iframe>
+                        <iframe th:src="${settings.videoUrl}" allowfullscreen></iframe>
                       </div>
                     </figure>
                   </div><!-- /.sumry-body -->
